--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "busca_binaria.C": "cpp",
         "exercicio_msort.C": "cpp",
         "exercicios_rand.C": "cpp",
-        "Exercicio_comparacao_7.C": "cpp"
+        "Exercicio_comparacao_7.C": "cpp",
+        "exercicios_listas.C": "cpp"
     }
 }
